--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="main_style.css">
     <script type="module" src="home.js"></script>
+    <script src="location.js"></script>
 </head>
 <body>
+    <div id="world"></div>
+    <button type="button" onmousedown="switchBackground('day');">Day</button>
+    <button type="button" onmousedown="switchBackground('night');">Night</button>
+    <button type="button" onmousedown="switchBackground('dusk');">Dusk</button>
+    <button type="button" onmousedown="switchBackground('dawn');">Dawn</button>
+    <button type="button" onmousedown="switchBackground('cloudy');">Cloudy</button>
 </body>
 </html>
