Structure complete, just need to change lorem texts.

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -28,6 +28,8 @@
         </div>
         <i class="fa fa-bars" aria-hidden="true" onclick="toggleMenu();"></i>
     </nav>
+
+    <!-- Sections for Projects -->
     <section class="Projects proj1">
         <div class="row">
             <div class="col-1">
@@ -40,7 +42,7 @@
             <div class="col-2">
                 <img src="../Images/ferrari.png" class="car">
                 <div class="color-box"></div>
-                <div class="try-btn">
+                <div class="try-btn try-dev">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                     <p><small>Go to Project</small></p>
                 </div>
@@ -61,7 +63,7 @@
                 <button class="proj-btn" type="button">View Code<i class="fa fa-github" aria-hidden="true"></i></button>
             </div>
             <div class="col2-rev">
-                <img src="../Images/ferrari.png" class="car">
+                <img src="../Images/delivery.png" class="delivery">
                 <div class="color-box"></div>
                 <div class="try-btn">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
@@ -84,9 +86,9 @@
                 <button class="proj-btn" type="button">View Code<i class="fa fa-github" aria-hidden="true"></i></button>
             </div>
             <div class="col-2">
-                <img src="../Images/ferrari.png" class="car">
+                <img src="../Images/Phone_dev.png" class="dev">
                 <div class="color-box"></div>
-                <div class="try-btn">
+                <div class="try-btn try-dev">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
                     <p><small>Go to Project</small></p>
                 </div>
@@ -107,7 +109,7 @@
                 <button class="proj-btn" type="button">View Code<i class="fa fa-github" aria-hidden="true"></i></button>
             </div>
             <div class="col2-rev">
-                <img src="../Images/ferrari.png" class="car">
+                <img src="../Images/inventory.png" class="inventory">
                 <div class="color-box"></div>
                 <div class="try-btn">
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
@@ -120,22 +122,9 @@
             <i class="fa fa-angle-double-down" aria-hidden="true"></i>
         </div>
     </section>
+    <!-- About section -->
     <section class="Projects about">
-        <div class="row-about soc-row">
-            <div class="col-desc">
-                <h2>PS4 V2<br>DualShock 4</h2>
-                <h3>Wireless Controller for Playstation 4</h3>
-                <h4>$32.58</h4>
-                <button class="watch-btn" type="button">Watch Me<i class="fa fa-youtube-play" aria-hidden="true"></i></button>
-            </div>
-            <div class="col-info">
-                <img src="../Images/ferrari.png" class="car">
-                <div class="color-box">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex necessitatibus labore provident voluptatum harum nesciunt voluptatem similique iure, doloremque perferendis cum ipsam quia, saepe fugiat pariatur consequuntur, aliquam vero. Mollitia!</p>
-                </div>
-            </div>
-        </div>
-        <div class="row-about engg-row">
+        <div class="row-about drone-row">
             <div class="col-desc">
                 <h2>PS4 V2<br>DualShock 4</h2>
                 <h3>Wireless Controller for Playstation 4</h3>
@@ -143,7 +132,7 @@
                 <h4>$32.58</h4>
             </div>
             <div class="col-info">
-                <img src="../Images/ferrari.png" class="car">
+                <img src="../Images/headshot.JPG" class="aero">
                 <div class="color-box">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit repellat saepe recusandae, eum ad autem ipsam dolorem earum maxime vero alias. Hic dignissimos facere, accusamus ratione incidunt architecto ex in.</p>
                 </div>
@@ -156,7 +145,7 @@
                 <h4>$32.58</h4>
             </div>
             <div class="col-info">
-                <img src="../Images/ferrari.png" class="car">
+                <img src="../Images/ferrari.png" class="arduino">
                 <div class="color-box">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima ea repudiandae suscipit eveniet atque, velit corporis totam est provident harum recusandae, libero ullam ipsum incidunt quidem doloribus dolore! Excepturi, minus!</p>
                 </div>
